@@ -32,13 +32,17 @@ void
 booster_module_load(booster_t *booster)
 {
   char *booster_path;
-  const char booster_sym[] = "booster_api";
+  char *booster_sym;
   char *error_s;
 
-  asprintf(&booster_path, "%s/maemo-booster-%s.so",
-	   MAEMO_BOOSTER_DIR, booster->name);
+  asprintf(&booster_path, MAEMO_BOOSTER_DIR "/maemo-booster-%s.so",
+	   booster->name);
   if (!booster_path)
     die(40, "allocating booster module path\n");
+
+  asprintf(&booster_sym, "booster_%s_api", booster->name);
+  if (!booster_sym)
+    die(40, "allocating booster symbol path\n");
 
   /* Load the booster module. */
   dlerror();
@@ -46,11 +50,15 @@ booster_module_load(booster_t *booster)
   if (!booster->so)
     die(41, "loading booster module: '%s'\n", dlerror());
 
+  free(booster_path);
+
   dlerror();
   booster->api = (booster_api_t *)dlsym(booster->so, booster_sym);
   error_s = dlerror();
   if (error_s != NULL)
     die(42, "loading booster symbol '%s': '%s'\n", booster_sym, error_s);
+
+  free(booster_sym);
 
   if (booster->api->booster_version != MAEMO_LAUNCHER_BOOSTER_API_VERSION)
     die(43, "cannot handle booster module version %d.\n",
